Fix heading color for improved readability

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -52,3 +52,8 @@
 }
 
 
+h1, h2, h3, h4, h5 {
+    color: var(--foreground)
+}
+
+
